Fixed bug with trailing slash. "The deeper Problem is, that the HttpClient  does not append a trailing slash....."